<PreferenceScreen xmlns:a="http://schemas.android.com/apk/res/android"
    xmlns:x="http://schemas.android.com/apk/res-auto">

    <x.Preference
        x:fragment="x.PreferenceFragmentExtra"
        x:icon="@drawable/ic_short_text_outline"
        x:title="@string/fragment_basics_title">
        <extra
            a:name="screen"
            a:value="@xml/preferences_basics" />
        <extra
            a:name="title"
            a:value="@string/fragment_basics_title" />
    </x.Preference>

    <x.Preference
        x:fragment="slions.pref.demo.PreferenceFragmentSwitches"
        x:icon="@drawable/ic_check_circle_outline"
        x:title="@string/fragment_switches_title" />

    <x.Preference
        x:fragment="slions.pref.demo.PreferenceFragmentSliders"
        x:icon="@drawable/ic_sliders_outline"
        x:title="@string/fragment_sliders_title" />

    <x.Preference
        x:fragment="slions.pref.demo.PreferenceFragmentEditText"
        x:icon="@drawable/ic_short_text_outline"
        x:title="@string/fragment_edittext_title" />

    <x.Preference
        x:fragment="slions.pref.demo.PreferenceFragmentCategories"
        x:icon="@drawable/ic_short_text_outline"
        x:title="@string/fragment_categories_title" />

    <x.Preference
        x:fragment="x.PreferenceFragmentExtra"
        x:icon="@drawable/ic_sliders_outline"
        x:title="@string/fragment_themes_title">
        <extra
            a:name="screen"
            a:value="@xml/preferences_themes" />
        <extra
            a:name="title"
            a:value="@string/fragment_themes_title" />
    </x.Preference>

    <Preference
        x:fragment="slions.pref.demo.PreferenceFragmentMessages"
        x:icon="@drawable/messages"
        a:key="messages_header"
        x:title="@string/messages_header" />

    <x.Preference
        x:fragment="slions.pref.demo.PreferenceFragmentSync"
        x:icon="@drawable/sync"
        a:key="sync_header"
        x:title="@string/sync_header" />


</PreferenceScreen>

