<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:a="http://schemas.android.com/apk/res/android"
    xmlns:x="http://schemas.android.com/apk/res-auto">

    <!-- =============== TEXT BEHAVIOR =============== -->

    <x.PreferenceCategory
        a:title="Text Behavior"
        x:iconSpaceReserved="false">

        <Preference
            a:title="@string/fragment_basics_ellipsis_title"
            a:summary="Test different ellipsis behaviors for title and summary"
            a:fragment="x.PreferenceFragmentExtra"
            x:iconSpaceReserved="false">
            <extra
                a:name="screen"
                a:value="@xml/preferences_basics_ellipsis" />
            <extra
                a:name="title"
                a:value="@string/fragment_basics_ellipsis_title" />
        </Preference>

        <Preference
            a:title="@string/fragment_basics_marquee_title"
            a:summary="Configure marquee scrolling repeat counts and behavior"
            a:fragment="x.PreferenceFragmentExtra"
            x:iconSpaceReserved="false">
            <extra
                a:name="screen"
                a:value="@xml/preferences_basics_marquee" />
            <extra
                a:name="title"
                a:value="@string/fragment_basics_marquee_title" />
        </Preference>

        <Preference
            a:title="@string/fragment_basics_maxlines_title"
            a:summary="Test maximum line settings for title and summary"
            a:fragment="x.PreferenceFragmentExtra"
            x:iconSpaceReserved="false">
            <extra
                a:name="screen"
                a:value="@xml/preferences_basics_maxlines" />
            <extra
                a:name="title"
                a:value="@string/fragment_basics_maxlines_title" />
        </Preference>

        <Preference
            a:title="@string/fragment_basics_modes_title"
            a:summary="Normal, scrollable, and selectable text modes"
            a:fragment="x.PreferenceFragmentExtra"
            x:iconSpaceReserved="false">
            <extra
                a:name="screen"
                a:value="@xml/preferences_basics_modes" />
            <extra
                a:name="title"
                a:value="@string/fragment_basics_modes_title" />
        </Preference>

    </x.PreferenceCategory>

    <!-- =============== VISUAL ELEMENTS =============== -->

    <x.PreferenceCategory
        a:title="Visual Elements"
        x:iconSpaceReserved="false">

        <Preference
            a:title="@string/fragment_basics_icons_title"
            a:summary="Test icon behavior and space reservation"
            a:fragment="x.PreferenceFragmentExtra"
            x:iconSpaceReserved="false">
            <extra
                a:name="screen"
                a:value="@xml/preferences_basics_icons" />
            <extra
                a:name="title"
                a:value="@string/fragment_basics_icons_title" />
        </Preference>

        <Preference
            a:title="@string/fragment_basics_drawables_title"
            a:summary="Add drawables to title text (start, end, top, bottom)"
            a:fragment="x.PreferenceFragmentExtra"
            x:iconSpaceReserved="false">
            <extra
                a:name="screen"
                a:value="@xml/preferences_basics_drawables" />
            <extra
                a:name="title"
                a:value="@string/fragment_basics_drawables_title" />
        </Preference>

        <Preference
            a:title="@string/fragment_basics_colors_title"
            a:summary="Customize title text colors with hard-coded or theme colors"
            a:fragment="x.PreferenceFragmentExtra"
            x:iconSpaceReserved="false">
            <extra
                a:name="screen"
                a:value="@xml/preferences_basics_colors" />
            <extra
                a:name="title"
                a:value="@string/fragment_basics_colors_title" />
        </Preference>

        <Preference
            a:title="@string/fragment_basics_allcaps_title"
            a:summary="Control all caps display for title and summary text"
            a:fragment="x.PreferenceFragmentExtra"
            x:iconSpaceReserved="false">
            <extra
                a:name="screen"
                a:value="@xml/preferences_basics_allcaps" />
            <extra
                a:name="title"
                a:value="@string/fragment_basics_allcaps_title" />
        </Preference>

    </x.PreferenceCategory>

    <!-- =============== ADVANCED FEATURES =============== -->

    <x.PreferenceCategory
        a:title="Advanced Features"
        x:iconSpaceReserved="false">

        <Preference
            a:title="@string/fragment_basics_combinations_title"
            a:summary="Test different combinations of title, summary, and icons"
            a:fragment="x.PreferenceFragmentExtra"
            x:iconSpaceReserved="false">
            <extra
                a:name="screen"
                a:value="@xml/preferences_basics_combinations" />
            <extra
                a:name="title"
                a:value="@string/fragment_basics_combinations_title" />
        </Preference>

        <Preference
            a:title="@string/fragment_basics_features_title"
            a:summary="displayedTitle, swapTitleSummary, breadcrumb, and more"
            a:fragment="x.PreferenceFragmentExtra"
            x:iconSpaceReserved="false">
            <extra
                a:name="screen"
                a:value="@xml/preferences_basics_features" />
            <extra
                a:name="title"
                a:value="@string/fragment_basics_features_title" />
        </Preference>

        <Preference
            a:title="@string/fragment_basics_spacing_title"
            a:summary="Control padding attributes per preference"
            a:fragment="x.PreferenceFragmentExtra"
            x:iconSpaceReserved="false">
            <extra
                a:name="screen"
                a:value="@xml/preferences_basics_spacing" />
            <extra
                a:name="title"
                a:value="@string/fragment_basics_spacing_title" />
        </Preference>


    </x.PreferenceCategory>

</PreferenceScreen>

